closes #6